<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <com.allever.lib.ui.widget.AnimationButton
            android:id="@+id/btnBackup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:text="@string/backup"
            android:textColor="@color/white"
            android:background="@drawable/common_btn_bg" />


        <com.allever.lib.ui.widget.AnimationButton
            android:id="@+id/btnRestore"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:text="@string/restore"
            android:textColor="@color/white"
            android:background="@drawable/common_btn_bg" />

        <com.allever.lib.ui.widget.AnimationButton
            android:id="@+id/btnDeleteBackup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:text="@string/del_backup"
            android:textColor="@color/white"
            android:background="@drawable/btn_delete_backup_bg" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>