<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color">

    <include layout="@layout/include_top_bar" />

    <ImageView
        android:id="@+id/about_iv_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/default_tv_color"
        android:layout_below="@id/about_iv_logo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/default_tv_color"
        android:layout_below="@id/about_app_name"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="V1.0"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/about_right"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/default_tv_color" />

    <TextView
        android:id="@+id/about_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/about_right"
        android:layout_marginBottom="60dp"
        android:drawableLeft="@drawable/ic_google_play_privacy"
        android:drawableStart="@drawable/ic_google_play_privacy"
        android:drawablePadding="10dp"
        android:padding="5dp"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/default_tv_color"
        android:visibility="visible" />


</RelativeLayout>